*** empty log message ***

--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -711,6 +711,8 @@ for (int i=0; i<array.items(); i++)
 
 \section{The parameter class: cPar}
 
+Module parameters are represented as \cclass{cPar} objects.
+
 \subsection{Basic usage}
 
 \cclass{cPar} is a class that is designed to hold a value. The value
