*** empty log message ***

--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -428,7 +428,7 @@ This saves both storage and execution time.
 
 You can attach non-object types (or non-\cclass{cObject} objects) to
 the message\index{message!attaching non-object types} by using
-\cclass{cPar}'s void* pointer 'P') type (see later in the description
+\cclass{cPar}'s \ttt{void*} pointer 'P') type (see later in the description
 of \cclass{cPar}). An example:
 
 \begin{verbatim}
