*** empty log message ***

--- a/doc/src/manual/ch-ana-sim.tex
+++ b/doc/src/manual/ch-ana-sim.tex
@@ -15,7 +15,7 @@ Output vectors are recorded from simple modules, by \cclass{cOutVector} objects
 (see section \ref{sec:ch-sim-lib:coutvector}). Since output vectors usually
 record a large amount of data, in \ttt{omnetpp.ini} you can disable vectors
 or specify a simulation time interval for recording
-(see section \ref{sec:ch-run-sim:outvectors-section}).
+(see section \ref{sec:ch-run-sim:outvectors}).
 
 All \cclass{cOutVector} objects write to the same, common file.
 The following sections describe the format of the file, and
