--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -216,7 +216,7 @@ For details, see section \ref{sec:ch-run-sim:parameter-settings}
 %%
 \ttt{[OutVectors]} & Configures recording of output vectors. You can specify
 filtering by vector names and by simulation time (start/stop recording).
-For details, see section \ref{sec:ch-run-sim:outvectors-section}
+For details, see section \ref{sec:ch-run-sim:outvectors}
 \\\hline
 %%
 \ttt{[DisplayStrings]} & Module display strings for Tkenv.
@@ -835,7 +835,7 @@ token.stations[*].waitTime = 1000ms
 
 
 \subsection{Configuring output vectors}
-\label{sec:ch-run-sim:outvectors-section}
+\label{sec:ch-run-sim:outvectors}
 
 As a simulation program is evolving, it is becoming capable of
 collecting more and more statistics. The size of output vector
